--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -2,23 +2,20 @@ name: build
 on:
   push:
     branches:
-    - main
+      - main
   pull_request:
 jobs:
   build:
     name: Build
     runs-on: ubuntu-24.04
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Generate tarball from image
-      run: |
-        docker pull nginx
-        docker save -o vuln-image.tar nginx
-
-    - name: Run Trivy vulnerability scanner in tarball mode
-      uses: aquasecurity/trivy-action@0.28.0
-      with:
-        input: /github/workspace/vuln-image.tar
-        severity: 'CRITICAL,HIGH'
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          scan-type: "fs"
+          scan-ref: .
+          format: 'template'
+          template: "@$HOME/.local/bin/trivy-bin/contrib/html.tpl"
