--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           scan-type: "fs"
           scan-ref: .
-          format: 'template'
+          format: 'table'
           template: "@$HOME/.local/bin/trivy-bin/contrib/html.tpl"
