--- a/.github/workflows/trivyscan.yml
+++ b/.github/workflows/trivyscan.yml
@@ -1,3 +1,4 @@
+
 name: Trivy Security Scan for NGINX
 
 on:
@@ -11,7 +12,7 @@ on:
 jobs:
   build:
     name: Scan nginx:latest with Trivy
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
@@ -36,21 +37,17 @@ jobs:
       - name: Download Trivy vulnerability database
         run: trivy image --download-db-only
 
-      - name: Run Trivy vulnerability scanner
+      - name: Run Trivy vulnerability scanner and show results
         run: |
           OUTPUT_FILE="GitHub Actions/Trivy Automation/scan-results-${DATE}.json"
-          mkdir -p "GitHub Actions/Trivy Automation"
+          echo "🔍 Running Trivy scan on nginx:latest..."
           trivy image --format json --ignore-unfixed --vuln-type os,library --severity CRITICAL,HIGH,MEDIUM,LOW -o "$OUTPUT_FILE" nginx:latest
+          echo "📄 Scan results saved to $OUTPUT_FILE"
+          echo "🧾 Displaying scan results:"
+          cat "$OUTPUT_FILE"
 
-      - name: Verify scan results exist
-        run: ls -l "GitHub Actions/Trivy Automation/"
-
-      - name: Commit scan results to repository
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add "GitHub Actions/Trivy Automation/scan-results-${DATE}.json"
-          git commit -m "Add Trivy scan results (${DATE})"
-          git push origin HEAD:main
+      - name: Upload Trivy scan results
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-scan-${{ env.DATE }}
+          path: GitHub Actions/Trivy Automation/scan-results-${{ env.DATE }}.json
